--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@solidjs/router": "^0.14.3",
     "@tanstack/solid-query": "^5.52.0",
-    "solid-js": "^1.8.11"
+    "solid-js": "^1.8.11",
+    "vite-plugin-vercel": "^9.0.1"
   }
 }
